--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,11 +39,12 @@ body {
     main {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
-        padding: 5em 6em 5em 6em;
+        justify-content: space-between;
+        padding: 10em 6em 5em 6em;
 
         @media screen and (max-width: 576px) {
             padding: 2.5em;
+            justify-content: space-around;
         }
 
         .content {
@@ -51,11 +52,11 @@ body {
         }
 
         h1 {
-            font-size: 3em;
+            font-size: 4vw;
             font-weight: bold;
             
             @media screen and (max-width: 576px) {
-                font-size: 1.5em;
+                font-size: 6vw;
             }
         }
 
