--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,7 +54,7 @@ body {
         h1 {
             font-size: 4vw;
             font-weight: bold;
-            
+            margin-bottom: 20px;
             @media screen and (max-width: 576px) {
                 font-size: 6vw;
             }
