--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,19 +52,21 @@ body {
   body main {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    padding: 5em 6em 5em 6em; }
+    justify-content: space-between;
+    padding: 10em 6em 5em 6em; }
     @media screen and (max-width: 576px) {
       body main {
-        padding: 2.5em; } }
+        padding: 2.5em;
+        justify-content: space-around; } }
     body main .content {
       z-index: 9; }
     body main h1 {
-      font-size: 2em;
-      font-weight: bold; }
+      font-size: 4vw;
+      font-weight: bold;
+      margin-bottom: 20px; }
       @media screen and (max-width: 576px) {
         body main h1 {
-          font-size: 1.5em; } }
+          font-size: 6vw; } }
     body main ul {
       list-style: none;
       padding: 0; }
