--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,9 @@ body {
       font-size: 3vw;
       font-weight: bold;
       margin-bottom: 20px; }
+      @media screen and (max-width: 576px) {
+        body main h1 {
+          font-size: 9vw; } }
     body main ul {
       list-style: none;
       padding: 0; }
