--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,6 +56,9 @@ body {
             font-size: 3vw;
             font-weight: bold;
             margin-bottom: 20px;
+            @media screen and (max-width: 576px) {
+                font-size: 9vw;
+            }
         }
 
         ul {
