--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,74 +1,115 @@
-@import "./fonts";
+@import "./locomotive-scroll.scss";
 
-
-html, body, main {
-    height: 100%;
-}
+$heading-font: 'Cabin',
+sans-serif;
+$main-font: 'Montserrat',
+sans-serif;
+$blackish: #01020e;
+$blue: #0f1ff0;
+$orange: #fd7e00;
+$red: #FF5963;
+$white: #F5F5FF;
+$gray: #383838;
+$cream: #f2f2f2;
 
 body {
-    font-family: "nib";
-    letter-spacing: -.02em;
-    scroll-behavior: smooth;
-    background-image: linear-gradient(45deg, rgb(133, 255, 189) 0%, rgb(255, 251, 125) 100%);
-    position: relative;
+    margin: 0;
+    padding: 0;
+    color: $blackish;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+    font-family: $main-font;
+}
+
+
+#nav {
+    .nav-container {
+        width: 100%;
+        height: 90vh;
+        min-height: 46rem;
+        position: relative;
+        font-size: 1rem;
+        display: flex;
+        justify-content: flex-end;;
+
+        .header-title {
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: 0;
+            position: absolute;
+            perspective: 600px;
+            -webkit-perspective: 600px;
+            font-size: 13.5vw;
+            opacity: 0;
+            transition: opacity 4s;
+            font-family: $heading-font;
+        }
+
+    }
+}
+
+section {
+    padding: 5px 40px;
+    min-height: 70vh;
+
+    &:not(#nav) {
+        @media only screen and (min-width: 1000px) {
+            padding: 120px 40px;
+        }
+    }
+
+    &.project {
+        margin: 0 auto;
+    }
+
+    .section-title {
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+        margin: 50px 0 20px 0;
+        font-size: 1rem;
+    }
+
+    .animated-title {
+        font-family: $heading-font;
+        font-size: 48px;
+        line-height: 48px;
+        margin-bottom: 32px;
+
+        @media only screen and (min-width: 1000px) {
+            font-size: 4rem;
+            line-height: 120px;
+            margin-bottom: 50px;
+        }
+    }
+
+    img {
+        max-width: 50%;
+    }
+
+    p {
+        font-size: 1.5rem;
+        max-width: 800px;
+    }
+
+    .content {
+        font-size: 24px;
+        max-width: 800px;
+        margin: 40px 0;
+    }
 
     a {
+        color: $blackish;
         text-decoration: none;
-         color: black;
-         &:hover {
-            color: black;
+
+        &:hover {
             text-decoration: underline;
-            font-style: italic;
-         }
-    }
-
-    #circle {
-        background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
-        width: 300px;
-        height: 300px;
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: 0;
-        margin: auto;
-        border-radius: 50%;
-        opacity: 0.7;
-    }
-    
-    main {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 10em 6em 5em 6em;
-
-
-        @media screen and (max-width: 576px) {
-            padding: 2.5em;
-            justify-content: space-around;
-        }
-
-        .content {
-            z-index: 9;
-        }
-
-        h1 {
-            font-size: 3vw;
-            font-weight: bold;
-            margin-bottom: 20px;
-
-            @media screen and (max-width: 768px) {
-                font-size: 9vw;
-            }
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        footer {
-            font-size: 1.2em;
         }
     }
+}
+
+.appear {
+    opacity: 1 !important;
 }
